AtiRoNya/il2cpp.h

extern il2cpp_class_from_il2cpp_type_t il2cpp_class_from_il2cpp_type;
extern il2cpp_class_get_fields_t il2cpp_class_get_fields;
extern il2cpp_class_get_nested_types_t il2cpp_class_get_nested_types;
extern il2cpp_class_get_methods_t il2cpp_class_get_methods;
extern il2cpp_class_get_type_t il2cpp_class_get_type;
extern il2cpp_class_get_type_token_t il2cpp_class_get_type_token;
extern il2cpp_domain_assembly_open_t il2cpp_domain_assembly_open;
extern il2cpp_assembly_get_image_t il2cpp_assembly_get_image;
extern il2cpp_field_get_offset_t il2cpp_field_get_offset;
extern il2cpp_field_get_value_t il2cpp_field_get_value;
extern il2cpp_field_set_value_t il2cpp_field_set_value;
extern il2cpp_field_static_get_value_t il2cpp_field_static_get_value;
extern il2cpp_field_static_set_value_t il2cpp_field_static_set_value;
extern il2cpp_method_get_name_t il2cpp_method_get_name;
extern il2cpp_method_get_token_t il2cpp_method_get_token;
extern il2cpp_object_new_t il2cpp_object_new;
extern il2cpp_object_unbox_t il2cpp_object_unbox;
extern il2cpp_value_box_t il2cpp_value_box;
extern il2cpp_string_length_t il2cpp_string_length;
extern il2cpp_string_chars_t il2cpp_string_chars;
extern il2cpp_string_new_t il2cpp_string_new;
extern il2cpp_image_get_class_count_t il2cpp_image_get_class_count;
extern il2cpp_image_get_class_t il2cpp_image_get_class;